src/test/deca/context/invalid/Objet/inter_extends.des
The extended class  B does not exist